WA-5430 replace log4j with slf4j wrapper
Remove programmatic configuration. The logger should exist in the
configuration of the webapp

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.oxygenxml</groupId>
       <artifactId>web-author-privilegedlogs</artifactId>
       <version>24.1-SNAPSHOT</version>
