--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <version>24.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <scope>test</scope>
+  </dependency>
   </dependencies>
 
   <build>
